--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
             </li>
         </ul>
     </nav>
-    <main>Main</main>
+    <main>
+        <div class="chats-viewer"></div>
+        <div class="sender">
+            <button>Send</button>
+            <input type="text" name="message" id="message">
+        </div>
+    </main>
     <aside>Aside</aside>
 </body>
 
