added the message bar

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="chats-viewer"></div>
         <div class="sender">
             <button>Send</button>
-            <input type="text" name="message" id="message">
+            <input type="text" name="message" id="message" placeholder="type your message here...">
         </div>
     </main>
     <aside>Aside</aside>
